# ffbox

./: CNAME  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yaml
assets/: style.css
tauri/: Cargo.toml  compile_error.txt  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: default_presets.toml  downloader.rs  lib.rs  main.rs
ui/: App.vue  Layout.vue  router.ts  store.ts
ui/pages/: HomePage.vue  SettingsPage.vue
