[package]
name = "FFBox"
version = "0.1.0"
description = "FFBox: A Desktop app for batch processing with FFmpeg"
authors = ["Olcay TERCANLI"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ffbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1.50.0", features = ["full"] }
regex = "1.12.3"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["stream"] }
futures-util = "0.3.32"
zip = "8.2.0"
tar = "0.4.44"
xz2 = "0.1.7"
bytes = "1.11.1"
toml = "1.0.6"

